<resources>
    <string name="app_name">IWV Humane Society</string>
    <string name="app_developer">App Developed by Danjuree</string>

    <!-- String of Business Information -->
    <string name="business_name">Indian Wells Valley Humane Society</string>
    <string name="business_address">411 San Bernardino Blvd</string>
    <string name="business_city_state_zip">Ridgecrest, CA  93555</string>
    <string name="business_mailing_address">P.O. Box 1414</string>
    <string name="business_mailing_city_state_zip">Ridgecrest, CA  93556</string>
    <string name="business_phone">(760) 375 &#8211; 9302</string>
    <string name="business_website">www.iwvhs.org</string>
    <string name="business_copyright">\u00A9 2017 Indian Wells Valley Humane Society</string>

    <!-- Strings for Layouts -->
    <string name="string_seal">IWV Seal</string>
    <string name="string_help_out">Ways You Can Help Out</string>
    <string name="string_pets">Pet Image</string>
    <string name="string_brick">Brick Example</string>
    <string name="string_adopt_friend">Adopt a Friend</string>
    <string name="string_motto">Providing caring support for the animals in our community - helping
    those who cannot help themselves.</string>
    <string name="string_order_your_brick">Donate today, by purchasing an engraved paving brick for
    the front walkway.</string>

    <!-- Strings for Menus -->
    <string name="menu_home">Home</string>
    <string name="menu_adopt">Adopt a Friend</string>
    <string name="menu_news">News</string>
    <string name="menu_fund">Fundraisers</string>
    <string name="menu_donate">Donate</string>
    <string name="menu_sign_in">Sign-In</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="menu_delete_all">Delete All</string>
    <string name="menu_add_pet">Add Pet</string>
    <string name="menu_save">Save</string>
    <string name="menu_delete">Delete</string>

    <!-- Strings for UI -->
    <string name="delete">Delete</string>
    <string name="discard">Discard</string>
    <string name="cancel">Cancel</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="no_pets_found">We couldn\'t find any pets at this time, please contact the
    shelter!</string>
    <string name="no_camera">There is no camera detected on this device!</string>
    <string name="nothing_to_save">There is no pet information to save.</string>
    <string name="unsaved_changes_messgae">There is unsaved pet information which will be lost. Are
    you sure you want to continue?</string>
    <string name="delete_pet_dialog_message">Are you sure you want to delete this pet from the
    database?</string>
    <string name="delete_all_dialog_message">Are you sure you want to delete all pets from the
    database?</string>

    <!-- Strings for errors -->
    <string name="unknown_uri">Unknown URI</string>
    <string name="unknown_uri_match">Unknown URI Match</string>
    <string name="needs_name">Pet must have a name.</string>
    <string name="needs_age">Must enter a valid age group.</string>
    <string name="needs_gender">Must enter a valid gender.</string>
    <string name="needs_size">Must enter a valid size.</string>
    <string name="needs_state">Must enter a valid state value.</string>
    <string name="row_insert_failed">Row failed to insert.</string>
    <string name="unsupported_uri_insert">URI insert is unsupported.</string>
    <string name="unsupported_uri_delete">URI deletion is unsupported.</string>
    <string name="unsupported_uri_update">URI update is unsupported.</string>
    <string name="insert_error">An error occurred and the pet information was not saved.</string>
    <string name="insert_success">Pet Saved</string>
    <string name="update_error">An error occurred and the pet information was not updated.</string>
    <string name="update_success">Pet Updated</string>
    <string name="delete_error">An error occurred and the pet was not deleted from the
    database.</string>
    <string name="delete_success">Pet Deleted</string>
    <string name="delete_all_error">An error occurred and the pets were not deleted.</string>
    <string name="delete_all_success">All pets were deleted from the database.</string>
    <string name="get_context_null">Context retrieved is Null.</string>

    <!-- strings for the order form -->
    <string name="order_first_name">First Name</string>
    <string name="order_last_name">Last Name</string>
    <string name="order_address">Address</string>
    <string name="order_optional">(optional)</string>
    <string name="order_city">City</string>
    <string name="order_state">State</string>
    <string name="order_zip">Zip Code</string>
    <string name="order_email">Email</string>
    <string name="order_phone">Phone</string>
    <string name="order_small_brick_price">4x8 Brick, $70</string>
    <string name="order_large_brick_price">8x8 Brick, $150 (3 Additional Lines)</string>
    <string name="order_character_count">Maximum characters per line: 18</string>
    <string name="order_enter_characters">Enter up to 18 characters</string>
    <string name="order_first_line">First Line</string>
    <string name="order_second_line">Second Line</string>
    <string name="order_third_line">Third Line</string>
    <string name="order_fourth_line">Fourth Line</string>
    <string name="order_fifth_line">Fifth Line</string>
    <string name="order_sixth_line">Sixth Line</string>
    <string name="order_characters_left">%1$d of 18 characters left</string>
    <string name="order_payment_type">Please indicate payment type:</string>
    <string name="order_check">Check</string>
    <string name="order_cash">Cash</string>
    <string name="order_pay_pal">PayPal</string>
    <string name="order_checks_payable">Please make checks payable to: </string>
    <string name="order_check_number">Check Number: </string>
    <string name="order_amount">Amount: </string>
    <string name="order_mail_to">Mail To: </string>
    <string name="order_submit">Submit</string>

    <!-- Strings for Edit/Add a Pet Activity -->
    <string name="pet_edit_add">Add Pet</string>
    <string name="pet_edit_edit">Edit Pet</string>
    <string name="pet_edit_name">Name</string>
    <string name="pet_edit_type">Description</string>
    <string name="pet_edit_age">Age</string>
    <string name="pet_edit_zero">0</string>
    <string name="pet_edit_months">Months</string>
    <string name="pet_edit_years">Years</string>
    <string name="pet_edit_gender">Gender</string>
    <string name="pet_edit_size">Size</string>
    <string name="pet_edit_pounds">lbs.</string>
    <string name="pet_edit_ounces">oz.</string>
    <string name="pet_edit_location">Location</string>
    <string name="pet_edit_shelter">Shelter</string>
    <string name="pet_edit_city">City</string>
    <string name="pet_edit_state">State</string>
    <string name="pet_edit_zip">Zip Code</string>
    <string name="pet_edit_photo">Photo</string>
    <string name="pet_edit_add_photo">Add Photo</string>

    <!-- Strings for age spinner -->
    <string name="age_unknown">Unknown</string>
    <string name="age_baby">Baby</string>
    <string name="age_adult">Adult</string>

    <!-- Strings for gender spinner -->
    <string name="gender_unknown">Unknown</string>
    <string name="gender_female">Female</string>
    <string name="gender_male">Male</string>

    <!-- Strings for size spinner -->
    <string name="size_unknown">Unknown</string>
    <string name="size_small">Small</string>
    <string name="size_medium">Medium</string>
    <string name="size_large">Large</string>

    <!-- Strings for state spinner -->
    <string name="al">AL</string>
    <string name="ak">AK</string>
    <string name="az">AZ</string>
    <string name="ar">AR</string>
    <string name="ca">CA</string>
    <string name="co">CO</string>
    <string name="ct">CT</string>
    <string name="de">DE</string>
    <string name="fl">FL</string>
    <string name="ga">GA</string>
    <string name="hi">HI</string>
    <string name="id">ID</string>
    <string name="il">IL</string>
    <string name="in">IN</string>
    <string name="ia">IA</string>
    <string name="ks">KS</string>
    <string name="ky">KY</string>
    <string name="la">LA</string>
    <string name="me">ME</string>
    <string name="md">MD</string>
    <string name="ma">MA</string>
    <string name="mi">MI</string>
    <string name="mn">MN</string>
    <string name="ms">MS</string>
    <string name="mo">MO</string>
    <string name="mt">MT</string>
    <string name="ne">NE</string>
    <string name="nv">NV</string>
    <string name="nh">NH</string>
    <string name="nj">NJ</string>
    <string name="nm">NM</string>
    <string name="ny">NY</string>
    <string name="nc">NC</string>
    <string name="nd">ND</string>
    <string name="oh">OH</string>
    <string name="ok">OK</string>
    <string name="or">OR</string>
    <string name="pa">PA</string>
    <string name="ri">RI</string>
    <string name="sc">SC</string>
    <string name="sd">SD</string>
    <string name="tn">TN</string>
    <string name="tx">TX</string>
    <string name="ut">UT</string>
    <string name="vt">VT</string>
    <string name="va">VA</string>
    <string name="wa">WA</string>
    <string name="wv">WV</string>
    <string name="wi">WI</string>
    <string name="wy">WY</string>

</resources>