<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CardListActivity">

    <!-- TODO activate this menu item -->
    <item
        android:id="@+id/menu_pet_list_home"
        android:title="@string/menu_home"
        android:icon="@drawable/ic_home_white_24dp"
        app:showAsAction="always"/>

    <!-- TODO activate this menu item -->
    <item
        android:id="@+id/menu_pet_list_news"
        android:title="@string/menu_news"
        app:showAsAction="never"/>

    <!-- TODO activate this menu item -->
    <item
        android:id="@+id/menu_pet_list_fund"
        android:title="@string/menu_fund"
        app:showAsAction="never"/>

    <!-- TODO activate this menu item -->
    <item
        android:id="@+id/menu_pet_list_donate"
        android:title="@string/menu_donate"
        app:showAsAction="never"/>

    <!-- TODO activate this menu item -->
    <item
        android:id="@+id/menu_pet_list_delete_all"
        android:title="@string/menu_delete_all"
        app:showAsAction="never"/>

    <!-- TODO activate this menu item -->
    <item
        android:id="@+id/menu_pet_list_contact_us"
        android:title="@string/menu_contact_us"
        app:showAsAction="never"/>

    <!-- TODO activate this menu item -->
    <item
        android:id="@+id/menu_pet_list_settings"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom"/>

    <!-- TODO activate this menu item -->
    <item
        android:id="@+id/menu_pet_list_add"
        android:title="@string/menu_add_pet"
        app:showAsAction="never"/>

</menu>